fixed more than one line word wrap bug

--- a/google_code_in/spell_checker_interface/jsDw/style.css
+++ b/google_code_in/spell_checker_interface/jsDw/style.css
@@ -42,6 +42,11 @@ h1 {
     background-color: rgba(0,0,0,0);
     margin: 0 auto;
     color: rgba(0,0,0,0);
+    white-space: pre-wrap;      /* CSS3 */   
+    white-space: -moz-pre-wrap; /* Firefox */    
+    white-space: -pre-wrap;     /* Opera <7 */   
+    white-space: -o-pre-wrap;   /* Opera 7 */    
+    word-wrap: break-word; 
 }
 .misspelled {
     border-bottom: solid red 1px;
